--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,6 @@
 	<!-- Scripts -->
 	<script src="js/lib/jquery-min.js"></script>
 	<script src="js/lib/underscore-min.js"></script>
-	<script src="js/app/main.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
