Added jquery & updated index references to bower_components

--- a/app/index.html
+++ b/app/index.html
@@ -13,8 +13,8 @@
 	<!-- BODY CODE HERE -->
 
 	<!-- Scripts -->
-	<script src="js/lib/jquery-min.js"></script>
-	<script src="js/lib/underscore-min.js"></script>
+	<script src="bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="bower_components/underscore/underscore-min.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
